# embargo

./: Cargo.toml  build.rs
embargo/: Cargo.toml  main.slint  window.rs
embargo/src/: cli.rs  config.rs  error.rs  hardware_mon.rs  main.rs  run.rs  ui.rs  window.rs
embargo/src/config/: timings.rs
embargo/ui/: main.slint
embargo_widget/: Cargo.toml
embargo_widget/src/: lib.rs
embargo_workspace/: Cargo.toml
embargo_workspace/src/: lib.rs
hyprland_workspaces/: Cargo.toml
hyprland_workspaces/src/: lib.rs
layer_platform/: Cargo.toml
layer_platform/src/: lib.rs  ui.rs  window.rs
src/: main.rs  ui.rs  window.rs
ui/: main.slint
