[package]
name = "embargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.25"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
dirs = "5.0.1"
embargo_workspace = { version = "0.1.0", path = "../embargo_workspace", optional=true}
human-repr = "1.1.0"
hyprland_workspaces = { version = "0.1.0", path = "../hyprland_workspaces", optional=true }
layer_platform = { version = "0.1.0", path = "../layer_platform" }
serde = { version = "1.0.163", features = ["derive"], default-features = false }
slint = { version = "1.0.2", default-features = false, features = ["compat-1-0", "software-renderer-systemfonts"] }
slint-interpreter = { version = "1.1.0", default-features = false, features = ["compat-1-0"] }
spin_on = "0.1.1"
sysinfo = "0.29.0"
toml = { version = "0.7.5", features = ["indexmap"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
default = ["hyprland"]
hyprland = ["dep:hyprland_workspaces", "workspaces"]
workspaces = ["dep:embargo_workspace"]
