[package]
name = "layer_platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
slint = { version = "1.1.0", default-features = false }
smithay-client-toolkit = "0.17.0"
tracing = "0.1.37"
wayland-client = "0.30.2"
